--- a/raytracer.cabal
+++ b/raytracer.cabal
@@ -20,6 +20,8 @@ executable raytracer
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base         >=4.6 && <4.7
+                     , vector-space >=0.9 && <1.0
+                     , AC-PPM       >=1.1 && <1.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
