fixed vector math, implemented spheres, made a nice scene

--- a/raytracer.cabal
+++ b/raytracer.cabal
@@ -18,6 +18,7 @@ cabal-version:       >=1.10
 
 executable raytracer
   main-is:             Main.hs
+  ghc-options:         -O
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base         >=4.6 && <4.8
